--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "gsap": "^3.11.1",
     "next": "12.1.4",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "sass": "^1.55.0",
+    "scss": "^0.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
